[project]
name = "neural-codec-challenge"
version = "0.1.0"
description = "Neural Image Codec Challenge — The Compression Company"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pillow>=10.0.0",
    "torch==2.9.1",
    "torchvision>=0.20.0",
    "matplotlib>=3.10.8",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
